Renamed Reporting to Uttaksdata; Reenabled integration tests
