# src/main/kotlin/no/oslokommune/ombruk/uttaksdata/api/ReportingAPI.kt
@@ -1,4 +1,4 @@
-package no.oslokommune.ombruk.reporting.api
+package no.oslokommune.ombruk.uttaksdata.api
 
 import arrow.core.flatMap
 import io.ktor.application.call
@@ -10,29 +10,29 @@ import io.ktor.response.respond
 import io.ktor.routing.Routing
 import io.ktor.routing.patch
 import io.ktor.routing.route
-import no.oslokommune.ombruk.reporting.form.ReportGetByIdForm
-import no.oslokommune.ombruk.reporting.form.ReportGetForm
-import no.oslokommune.ombruk.reporting.form.ReportUpdateForm
-import no.oslokommune.ombruk.reporting.service.IReportService
+import no.oslokommune.ombruk.uttaksdata.form.ReportGetByIdForm
+import no.oslokommune.ombruk.uttaksdata.form.ReportGetForm
+import no.oslokommune.ombruk.uttaksdata.form.ReportUpdateForm
+import no.oslokommune.ombruk.uttaksdata.service.IReportService
 import no.oslokommune.ombruk.shared.api.Authorization
 import no.oslokommune.ombruk.shared.api.Roles
 import no.oslokommune.ombruk.shared.api.generateResponse
 import no.oslokommune.ombruk.shared.api.receiveCatching
 
 @KtorExperimentalLocationsAPI
-fun Routing.report(reportService: IReportService) {
-    route("/reports") {
+fun Routing.uttaksdata(uttaksdataService: IReportService) {
+    route("/uttaksdata") {
 
         get<ReportGetByIdForm> { form ->
             form.validOrError()
-                .flatMap { reportService.getReportById(it.id) }
+                .flatMap { uttaksdataService.getReportById(it.id) }
                 .run { generateResponse(this) }
                 .also { (code, response) -> call.respond(code, response) }
         }
 
         get<ReportGetForm> { form ->
             form.validOrError()
-                .flatMap { reportService.getReports(it) }
+                .flatMap { uttaksdataService.getReports(it) }
                 .run { generateResponse(this) }
                 .also { (code, response) -> call.respond(code, response) }
         }
@@ -44,8 +44,8 @@ fun Routing.report(reportService: IReportService) {
                     .flatMap { form ->
                         Authorization.run {
                             authorizeRole(listOf(Roles.Partner, Roles.RegEmployee, Roles.ReuseStasjon), call)
-                                .flatMap { authorizeReportPatchByPartnerId(it) { reportService.getReportById(form.id) } }
-                        }.flatMap { reportService.updateReport(form) }
+                                .flatMap { authorizeReportPatchByPartnerId(it) { uttaksdataService.getReportById(form.id) } }
+                        }.flatMap { uttaksdataService.updateReport(form) }
                     }
                     .run { generateResponse(this) }
                     .also { (code, response) -> call.respond(code, response) }
