# src/main/kotlin/no/oslokommune/ombruk/uttaksdata/model/Report.kt
@@ -1,4 +1,4 @@
-package no.oslokommune.ombruk.reporting.model
+package no.oslokommune.ombruk.uttaksdata.model
 
 import kotlinx.serialization.Serializable
 import no.oslokommune.ombruk.stasjon.model.Stasjon
@@ -7,12 +7,12 @@ import java.time.LocalDateTime
 
 @Serializable
 data class Report(
-        val reportId: Int = 0,
+        val uttaksdataId: Int = 0,
         val uttakId: Int,
         val partnerId: Int?,
         val stasjon: Stasjon,
         @Serializable(with = LocalDateTimeSerializer::class) val startDateTime: LocalDateTime,
         @Serializable(with = LocalDateTimeSerializer::class) val endDateTime: LocalDateTime,
         val weight: Int? = null,
-        @Serializable(with = LocalDateTimeSerializer::class) val reportedDateTime: LocalDateTime? = null
+        @Serializable(with = LocalDateTimeSerializer::class) val uttaksdataedDateTime: LocalDateTime? = null
 )
